crates/pgls_pretty_print/tests/snapshots/single/tests__create_extension_stmt_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/create_extension_stmt_0_60.sql
snapshot_kind: text
---
CREATE EXTENSION IF NOT EXISTS pgcrypto;
