crates/pgls_pretty_print/tests/snapshots/single/tests__create_extension_stmt_1_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/create_extension_stmt_1.sql
---
create extension vector with schema extensions;
