crates/pgls_pretty_print/tests/snapshots/single/tests__create_fdw_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/create_fdw_stmt_0_100.sql
snapshot_kind: text
---
CREATE FOREIGN DATA WRAPPER postgres_fdw;
