crates/pgls_pretty_print/tests/snapshots/single/tests__create_foreign_table_stmt_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/create_foreign_table_stmt_0.sql
snapshot_kind: text
---
CREATE FOREIGN TABLE foreign_users (
  id INT
) SERVER myserver;
