crates/pgls_pretty_print/tests/snapshots/single/tests__create_foreign_table_stmt_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/create_foreign_table_stmt_0.sql
snapshot_kind: text
---
create foreign table foreign_users ( id int ) server myserver;
