crates/pgls_pretty_print/tests/snapshots/single/tests__create_function_stmt_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/create_function_stmt_0_60.sql
snapshot_kind: text
---
CREATE FUNCTION
add(
  "a" INT,
  "b" INT
)
RETURNS INT
AS 'SELECT $1 + $2'
LANGUAGE "sql";
